# github_adapter

./: Cargo.toml
src/: main.rs
src/adapter/: adapter.rs  edges.rs  entrypoints.rs  generic_iterator.rs  issue_iterator.rs  mod.rs  properties.rs  reactions.rs  schema.graphql  util.rs  vertex.rs
